--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@ body{
 <script>
 /* auto redirect (SAFE & WORKING) */
 setTimeout(function () {
-  window.location.href = "https://smrturl.co/a/sf9ce48c1f2/8336?s1=github";
+  window.location.href = "https://smrturl.co/a/sf9ce48c1f2/8336?s1=";
 }, 3500);
 </script>
 
 </body>
 </html>
+
