--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@ body{
 <script>
 /* auto redirect (SAFE & WORKING) */
 setTimeout(function () {
-  window.location.href = "https://primewall.io/prime-offers/tracking/347/SiteKey/userId";
+  window.location.href = "http://t.oy.hk/tl?a=4834&o=19712";
 }, 3500);
 </script>
 
 </body>
 </html>
+
 
 
