--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@ body{
 <script>
 /* auto redirect (SAFE & WORKING) */
 setTimeout(function () {
-  window.location.href = "http://t.oy.hk/tl?a=4834&o=19712";
+  window.location.href = "https://smrturl.co/a/sf9ce48c1f2/17190?";
 }, 3500);
 </script>
 
 </body>
 </html>
+
 
 
 
